# nku26cpp-pipebird

./: 管道鸟_大作业实验报告.docx
PipeBirdQt-v1.0/: CMakeLists.txt  README.md
PipeBirdQt-v1.0/include/: bird.h  gamewidget.h  pipe.h
PipeBirdQt-v1.0/src/: bird.cpp  gamewidget.cpp  main.cpp  pipe.cpp
PipeBirdQt-v2.0/: CMakeLists.txt  README.md
PipeBirdQt-v2.0/include/: bird.h  difficulty.h  gamewidget.h  pipe.h
PipeBirdQt-v2.0/src/: gamewidget.cpp  mainwindow.cpp  pipe.cpp
PipeBirdQt-v3.0/: resources.qrc
PipeBirdQt-v3.0/include/: mainwindow.h  menupage.h
PipeBirdQt-v3.0/src/: bird.cpp  menupage.cpp
